@@ -10,3 +10,5 @@ In der Datei src/Makefile.modules lassen sich zwei Module anschalten:
 * gtkmm: eine graphische Ausgabe (benötigt die Entwicklerpakete von gtkmm Version 3, debian: libgtkmm-3.0-dev)
 * human: bei der graphischen Ausgabe kann ein Bot gesteuert werden
 Sind beide Module aktiv, kann über den Spielserver gegen einen eigenen Bot getestet werden.
+
+Es werden Raster von maximal 128*128 Größe unterstützt. Wird mehr benötigt, muss in src/spielraster/raster.h, Zeile 44 das „#define USE_BITSET“ auskommentiert werden.
