@@ -50,5 +50,5 @@ GAMEBOARDSTART 50,50
 ..................................................
 ..................................................
 GAMEBOARDEND
-POS 1 25,10 S
-POS 2 25,40 N
+POS 1 1,11 S
+POS 2 1,40 N
