@@ -1,8 +1,0 @@
-GAMEBOARDSTART 5,5
-....#
-.#.#.
-.....
-.#.#.
-.....
-GAMEBOARDEND
-POS 1 3,1 S
