@@ -36,4 +36,4 @@ GAMEBOARDSTART 35,35
 #################.#################
 GAMEBOARDEND
 POS 1 1,18 E
-POS 2 18,1 S
+POS 2 18,30 N
