@@ -17,20 +17,23 @@ BOTA="../src/tronbot"
 #BOTB="../src/tronbot"
 BOTB="bots/dummybot/bot"
 
+#SPIELRASTER="../Spielraster/Test.txt"
 #SPIELRASTER="../Spielraster/simple.txt"
+#SPIELRASTER="../Spielraster/200x200.txt"
+#SPIELRASTER="../Spielraster/100x100.txt"
 #SPIELRASTER="../Spielraster/50x50.txt"
 #SPIELRASTER="../Spielraster/5x5.txt"
-#SPIELRASTER="../Spielraster/5x5_Test.txt"
 #SPIELRASTER="../Spielraster/10x10.txt"
-SPIELRASTER="../Spielraster/Säulen_21.txt"
+#SPIELRASTER="../Spielraster/Säulen_21.txt"
 #SPIELRASTER="../Spielraster/Säulen_Test.txt"
-#SPIELRASTER="../Spielraster/Ring.txt"
+SPIELRASTER="../Spielraster/Ring.txt"
 #SPIELRASTER="../Spielraster/Ring_Test.txt"
 #SPIELRASTER="../Spielraster/Ring4.txt"
 #SPIELRASTER="../Spielraster/Labyrinth.txt"
 #SPIELRASTER="../Spielraster/Raumfüllen_1.txt"
 #SPIELRASTER="../Spielraster/Raumfüllen_2.txt"
 #SPIELRASTER="../Spielraster/Raumfüllen_3.txt"
+#SPIELRASTER="../Spielraster/Räume.txt"
 
 # nur ein Bot
 #SPIELRASTER="../Spielraster/5x5_1.txt"
