@@ -1,3 +1,6 @@
+2014-12-06
+	- Tiefensuche erweitert
+
 2014-12-05
 	- Tiefensuche mit einfacher Bewertung
 	- Tiefensuche für Endspiel
